--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --project tsconfig.json && tsconfig-replace-paths --project tsconfig.json",
+    "build": "npx prisma generate && tsc --project tsconfig.json && tsconfig-replace-paths --project tsconfig.json",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
@@ -18,8 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "node-cron": "^3.0.2",
-    "prisma": "^4.7.1"
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
     "@types/async": "^3.2.16",
@@ -28,6 +27,7 @@
     "@types/node": "^18.11.11",
     "@types/node-cron": "^3.0.6",
     "concurrently": "^7.6.0",
+    "prisma": "^4.7.1",
     "tsconfig-paths": "^4.1.1",
     "tsconfig-replace-paths": "^0.0.11",
     "typescript": "^4.9.3"
