--- a/package.json
+++ b/package.json
@@ -6,26 +6,22 @@
   "scripts": {
     "build": "npx prisma generate && tsc --project tsconfig.json && tsconfig-replace-paths --project tsconfig.json",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "4.7.1",
+    "@supercharge/promise-pool": "^2.3.2",
     "async": "^3.2.4",
     "axios": "1.1.2",
-    "canvas": "^2.10.2",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "lodash": "^4.17.21",
-    "node-cron": "^3.0.2"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/async": "^3.2.16",
-    "@types/express": "^4.17.14",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.11",
-    "@types/node-cron": "^3.0.6",
     "concurrently": "^7.6.0",
     "prisma": "^4.7.1",
     "tsconfig-paths": "^4.1.1",
